<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_bus_driver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="#FF9800"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_bus_driver_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/logout"
                android:backgroundTint="@color/cardview_light_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Bus Captain"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lbl_driver_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/driver_name"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <TextView
                android:id="@+id/txt_driver_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/lbl_driver_name"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <TextView
                android:id="@+id/lbl_driver_nric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/driver_nric"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbl_driver_name" />

            <TextView
                android:id="@+id/txt_driver_nric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/lbl_driver_nric"
                app:layout_constraintTop_toBottomOf="@+id/txt_driver_name" />

            <TextView
                android:id="@+id/lbl_driver_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/driver_mobile"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbl_driver_nric" />

            <TextView
                android:id="@+id/txt_driver_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/lbl_driver_name"
                app:layout_constraintTop_toBottomOf="@+id/txt_driver_nric" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_shift"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="#CF8D2C"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_bus_driver">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_shift_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:visibility="visible">

            <Button
                android:id="@+id/btn_refresh"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@android:drawable/ic_popup_sync"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/lbl_shift_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shift"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/card_shift_exist_layout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbl_shift_title">

                <TextView
                    android:id="@+id/txt_shift_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="16dp"
                    android:text="Shift Code"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_shift_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="Shift Description"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@id/txt_shift_code"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_shift_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Start Time - End Time"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_shift_desc" />

                <TextView
                    android:id="@+id/txt_route_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Route Code"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_shift_time" />

                <TextView
                    android:id="@+id/txt_route_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="Route Description"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/txt_route_code"
                    app:layout_constraintTop_toBottomOf="@+id/txt_shift_time" />

                <!--                <TextView-->
                <!--                    android:id="@+id/lbl_select_bus"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_marginTop="24dp"-->
                <!--                    android:text="Select a Bus"-->
                <!--                    android:textSize="18sp"-->
                <!--                    android:visibility="visible"-->
                <!--                    app:layout_constraintStart_toStartOf="parent"-->
                <!--                    app:layout_constraintTop_toBottomOf="@id/txt_route_code" />-->

                <!--                <Spinner-->
                <!--                    android:id="@+id/spinner_bus"-->
                <!--                    android:layout_width="0dp"-->
                <!--                    android:layout_height="36dp"-->
                <!--                    android:layout_marginTop="8dp"-->
                <!--                    android:background="?attr/colorButtonNormal"-->

                <!--                    android:spinnerMode="dialog"-->
                <!--                    android:visibility="visible"-->
                <!--                    app:layout_constraintEnd_toEndOf="parent"-->
                <!--                    app:layout_constraintStart_toStartOf="parent"-->
                <!--                    app:layout_constraintTop_toBottomOf="@id/lbl_select_bus" />-->

                <!--                <TextView-->
                <!--                    android:id="@+id/txt_error_bus"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:text="No Buses Available"-->
                <!--                    android:textColor="@android:color/holo_red_dark"-->
                <!--                    android:visibility="gone"-->
                <!--                    app:layout_constraintStart_toStartOf="parent"-->
                <!--                    app:layout_constraintTop_toBottomOf="@id/spinner_bus" />-->

                <LinearLayout
                    android:id="@+id/select_bus_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_route_code"
                    app:layout_constraintVertical_bias="0.117">

                    <TextView
                        android:id="@+id/lbl_select_bus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Select a Bus"
                        android:textSize="18sp"
                        android:visibility="visible" />

                    <Spinner
                        android:id="@+id/spinner_bus"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_marginTop="8dp"
                        android:background="?attr/colorButtonNormal"
                        android:spinnerMode="dialog"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/txt_error_bus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/error_no_bus"
                        android:textColor="@android:color/holo_red_dark"
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/spinner_bus" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txt_current_bus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Bus Selected"
                    android:textSize="18sp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_route_code" />

                <Button
                    android:id="@+id/btn_start_end_shift"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_shift"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/card_shift_nonexistent_layout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="20dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbl_shift_title">

                <TextView
                    android:id="@+id/txt_no_shift"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No Shifts Available Today"
                    android:textSize="24sp"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>